styles.css
/* THOROUGH */
* {
    box-sizing: border-box;
    font-family: 'Titillium Web', sans-serif;
    --white: #edebf3;
    --light: #c7dba8;
    --main: #77cfb3;
    --dark: #151515;
    --black: #000;
}

.navbar-icons a:hover {
    /* background: var(--light); */
    animation: glow-small 20s infinite alternate;
}

.green {
    color: var(--main);
}

body, ul, li {
    margin: 0;
    padding: 0;
    list-style: none;
    background: var(--dark);
    font: var(--white);
}

p {
    color: var(--white);
}




/* Scroll Bar */
::-webkit-scrollbar {
    width: 10px;
}

/* Scrollbar Track */
::-webkit-scrollbar-track {
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background: var(--main);
}

::-webkit-scrollbar-thumb:hover {
    background: var(--white);
}





/* NAVBAR */

/* Style for the navigation bar */
.navbar {
    background-color: var(--black);
    color: var(--white);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px 10px 10px 30px;
    z-index: 999;
    position: fixed;
    top: 0;
    width: 100%;
}

/* Style for the icon links on the right */
.navbar-icons {
    display: flex;
    align-items: center;
}

/* Style for individual icon links */
.navbar-icons a {
    color: #fff;
    text-decoration: none;
    margin-right: 20px;
    font-size: 20px;
}

/* Style for the icons (you can use icon fonts or images) */
.navbar-icons i {
    margin-right: 5px;
}

/* icon size */
.icon {
    width: 60px;
}





/* First Section */

.brief-intro {
    height: 620px;
    margin-top: -100px;
    background: var(--black);
}

.person {
    position: absolute;
    height: 500px;
    margin-top: 40px;
    float: left;
    z-index: 5;
    top: -20px;
}

.icon-bg {
    position: absolute;
    z-index: 0;
    height: 200px;
    left: 0;
    top: -20px;
    left: -8%;
    opacity: 0.08;
}

/* intro letters */
.intro {
    color: var(--white);
    position: absolute;
    left: 55%;
    top: 150px;
    padding: 0;
    z-index: 3;
    /* line-height: 0; */
}

.name {
    font-size: 3rem;
    position: relative;
    left: -5%;
    top: -50px;
    font-weight: 600;
    line-height: 100%;
}

.role {
    position: relative;
    top: -90px;
    background: transparent;
}






/* Second Section */
.skill-title {
    padding-left: 20px;
    font-size: 2rem;
    color: var(--main);
    text-align: center;
}
.skill-set {
    background-color: var(--dark);
    color: var(--white);
    padding: 0 30px 30px 40px;
    width: 100%; /* Full width initially */
    display: flex;
    flex-wrap: wrap; /* Enable wrapping of skills */
    gap: 20px; /* Adjust the gap between skills */
    position: absolute;
}

.skill {
    flex: 1; /* Equal width for each skill */
    min-width: calc(50% - 20px); /* Adjust the percentage for the number of columns */
    margin-bottom: 20px;
}

summary {
    font-weight: bold;
    font-size: 2rem;
}












/* Other resolution */
@media (min-width: 1000px) {
    .intro {
        left: 45%;
    }
    .icon-bg {
        height: 350px;
        left: -10%;
        top: -70px;
    }
    .greeting {
        font-size: 1.2rem;
    }
    .name {
        font-size: 5rem;
        top: -80px;
    }
    .role {
        font-size: 2rem;
        top: -150px;
    }
}
@media (max-width: 800px) {
    .navbar-icons span {
        display: none; /* Hide the icon links */
    }
}
@media (max-width: 720px) {
    .intro {
        position: absolute;
        align-items: center;
        text-align: center;
        left: 40%;
        top: 30%;
    }
    .person {
        left: -80px;
    }
    .icon-bg {
        display: none;
    }
}

/* Define the glowing text effect */
.glowing-text {
    animation: glow 1s infinite alternate;
}

@keyframes glow {
    0% {
        text-shadow: 0 0 0px var(--main), 0 0 0px var(--main), 0 0 3px var(--main);
    }
    100% {
        text-shadow: 0 0 10px var(--main);
    }
}

@keyframes glow-small {
    0% {
        text-shadow: 0 0 0px var(--main), 0 0 0px var(--main), 0 0 0px var(--main);
    }
    100% {
        text-shadow: 0 0 5px var(--main);
    }
}

